BXC-5191 update processor and transformer to allow nulls